--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ a {
 
 .page {
   font-family: "roboto", sans-serif;
-
+  font-size: 14px;
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
 }
@@ -50,13 +50,13 @@ a {
   color: var(--secondary-text-color);
 
   font-weight: 500;
-  font-size: 14px;
+
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 .contacts .contacts-link {
   font-weight: 500;
-  font-size: 14px;
+
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -65,19 +65,22 @@ a {
 
 .navigation .link:hover,
 .navigation .link:focus,
-.contacts .contacts-link:hover,
-.contacts .contacts-link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: var(--accent-color);
 }
 
 .site-navigation .link.current {
-  color: var(--accent-color)
+  color: var(--accent-color);
 }
 
 /* main styles */
 
 .hero {
   background-color: var(--tertiary-bg-color);
+}
+
+.hero-title {
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
@@ -86,6 +89,7 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+
 .hero-btn {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
@@ -104,23 +108,18 @@ a {
 .title {
   color: var(--secondary-text-color);
 
-  font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
 }
 
 .subtitle {
-  
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-.caption,
-.headline {
+.section-title {
   color: var(--secondary-text-color);
-  font-weight: 700;
+
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
@@ -131,7 +130,7 @@ a {
   background-color: var(--secondary-bg-color);
 }
 
-.headline-title {
+.team-name {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -140,17 +139,16 @@ a {
   letter-spacing: 0.03em;
 }
 
-.headline-subtitle {
-
+.team-position {
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
 }
 
-/* studio main */
+/* portfolio main */
 
-.studio-section-btn {
+.portfolio-section-btn {
   color: var(--secondary-text-color);
   cursor: pointer;
   font-family: "Roboto";
@@ -162,10 +160,24 @@ a {
   letter-spacing: 0.03em;
 }
 
-.studio-section-btn:hover,
-.studio-section-btn:focus {
-  background-color:var(--accent-color);
+.portfolio-section-btn:hover,
+.portfolio-section-btn:focus {
+  background-color: var(--accent-color);
   color: var(--primary-white-color);
+}
+
+.porject-title {
+  font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+
+color: var(--secondary-text-color);
+}
+
+.project-name {
+  font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.03em;
 }
 
 /* footer styles */
@@ -184,13 +196,18 @@ a {
 .footer-span {
   color: var(--accent-color);
 }
+
+.address {
+  font-style: normal;
+}
 .footer-link {
   color: var(--primary-white-color);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 .footer-contacts {
   color: var(--secondary-link-color);
 
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
